todo-api-with-ing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-ing
  labels:
    app: todo-api-ing
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: todo-api-ing
  template:
    metadata:
      labels:
        app: todo-api-ing
    spec:
      containers:
      - name: todo-api
        image: todo-api:kube
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: todo-api-config-volume
          mountPath: /config
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256M
          requests:
            cpu: 200m
            memory: 256M
      volumes:
        - name: todo-api-config-volume
          configMap:
            name: todo-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-ing-svc
  labels:
    app: todo-api-ing
spec:
  selector:
    app: todo-api-ing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  # type: LoadBalancer
